# multiclass_cascade_classifier

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
Commands/: predict.py  split.py  test.py  train.py
auchan/metrics/: general_stats.txt
auchan/models/: hyper-family.yaml  hyper-sector.yaml
auchan/raw_data/: project_structure3.txt
examples/log/: log.txt
examples/metrics/: classification_report_famille.xlsx  classification_report_secteur.xlsx  confusion_matrix_famille.xlsx  confusion_matrix_secteur.xlsx  general_stats.txt
examples/models/: hyper-family.yaml  hyper-sector.yaml
presentation/: project_structure.txt
src/multiclass_cascade_classifier/: ClassifierHelper.py  DataFrameNormalizer.py  DataHelper.py  DataPredicter.py  DataTrainer.py  DataVectorizer.py  FeaturesManipulator.py  HyperSelector.py  MetricsGenerator.py  PreProcessing.py  Scripts.py  Skeleton.py  Variables.py  VariablesChecker.py  __init__.py  predict.py  split.py  test.py  train.py
src/multiclass_cascade_classifier.egg-info/: PKG-INFO  SOURCES.txt
src/multiclass_cascade_classifier/base/: ClassifierHelper.py  DataFrameNormalizer.py  DataHelper.py  DataPredicter.py  DataTrainer.py  DataVectorizer.py  FeaturesManipulator.py  HyperSelector.py  LogJournal.py  MetricsGenerator.py  PreProcessing.py  VariablesChecker.py
src/multiclass_cascade_classifier/metrics/: classification_report_famille.xlsx  confusion_matrix_famille.xlsx  general_stats.txt
src/multiclass_cascade_classifier/model/: hyper-family.yaml
src/multiclass_cascade_classifier/models/: hyper-family.yaml  (+1 more)
(+1 files in other folders)
