[metadata]
name = multiclass_cascade_classifier
version = 0.0.4T
author = Thomas Aujoux
author_email = thomas.aujoux@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src